tests/good/test400.tig
let
  type int_array = array of int
  var tab := int_array [1] of 51
in
  let var i := range (0,2) in
    if i = 0 then(
      print("tab[");
      print_int(i);
      print("]:");
      print_int(tab[i]);
      print("\n")
    )
  end
end