tests/bad/bad35.tig
let
  type int_array = array of int
  var tab := int_array [10] of 51
in
  let var i := range (0,10) in
    if i <= 10 then(
      print("tab[");
      print_int(i);
      print("]:");
      print_int(tab[i]);
      print("\n")
    )else
      print("index out of bounds\n")
  end
end